backend_rag/compile_error.txt
debug_cpp.cpp:40:58: error: stray '\' in program
 void print_res(const string& v) { cout << "\\"" << v << "\\""; }
                                                          ^
debug_cpp.cpp:40:59: error: stray '\' in program
 void print_res(const string& v) { cout << "\\"" << v << "\\""; }
                                                           ^
